<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tv_app"
        android:layout_width="307dp"
        android:layout_height="91dp"
        android:gravity="center"
        android:text="@string/quiz_app"
        android:textColor="#194FF1"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tv_name1"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:hint="@string/name"
        android:inputType="text"
        android:maxLength="10"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app" />


    <EditText
        android:id="@+id/tv_registration_number"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:hint="@string/registration_number"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/bv_start_quiz1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name1" />

    <Button
        android:id="@+id/bv_start_quiz1"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginBottom="300dp"
        android:text="@string/start_quiz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>