<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tv_app"
        android:layout_width="301dp"
        android:layout_height="26dp"
        android:gravity="center"
        android:text="@string/quiz_app"
        android:textColor="#194FF1"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/quiz_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="85dp"
        android:text="@string/time_00"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tv_name2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.901"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app" />

    <TextView
        android:id="@+id/tv_name2"
        android:layout_width="371dp"
        android:layout_height="55dp"
        android:layout_marginTop="88dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app" />


    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/bv_start_quiz"
        app:layout_constraintTop_toBottomOf="@+id/tv_name2"
        app:layout_constraintVertical_bias="0.109"
        tools:layout_editor_absoluteX="0dp">


        <RadioButton
            android:id="@+id/tv_re"
            android:layout_width="200dp"
            android:layout_height="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/t"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name2" />

        <RadioButton
            android:id="@+id/tv_reg"
            android:layout_width="200dp"
            android:layout_height="32dp"
            android:text="@string/f"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_re" />

    </RadioGroup>

    <Button
        android:id="@+id/bv_start_quiz"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginBottom="60dp"
        android:text="@string/next"
        app:layout_constraintBottom_toTopOf="@+id/tv_name3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_name3"
        android:layout_width="363dp"
        android:layout_height="72dp"
        android:text="@string/correct_ans"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>